--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mapbox-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://frienchelin.github.io/examine/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -19,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "BUILD_PATH='./docs' react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
